Add board category

--- a/bbsmenu.html
+++ b/bbsmenu.html
@@ -2,6 +2,7 @@
 <html>
 <head></head>
 <body>
+  <br><br><b>Onionちゃんねる</b><br>
   <a href="http://xiwayy2kn32bo3ko.onion/tor/">Tor板</a>
   <a href="http://xiwayy2kn32bo3ko.onion/ero/">エロいの</a>
   <a href="http://xiwayy2kn32bo3ko.onion/ura/">アングラ板</a>
